# swagger/swagger.json
@@ -16,6 +16,36 @@
         "application/json"
     ],
     "paths": {
+        "/web-service": {
+            "post": {
+                "summary": "Connect to peer",
+                "tags": ["PeerConnection"],
+                "operationId": "ConnectPeer",
+                "deprecated": false,
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/ConnectPeerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "headers": {}
+                    }
+                }
+        }
         "/node": {
             "post": {
                 "summary": "Connect to peer",
